# IFI_BOOSTER_MIMIC

./: README.md
booster_assets-main/: .gitignore  README.md  setup.cfg
booster_assets-main/motions/K1/: k1_fight_001_30fps.csv  k1_mj2_seg1_50fps.csv
booster_assets-main/motions/T1/: manifest.backup.json  manifest.json  video_012.npz
booster_assets-main/robots/K1/: K1_22dof-ZED.urdf  K1_22dof.urdf  K1_22dof.xml  K1_locomotion.urdf
booster_assets-main/robots/T1/: T1_23dof.urdf  T1_23dof.xml  T1_29dof.urdf  T1_locomotion.urdf  T1_locomotion.xml
booster_assets-main/robots/T1/meshes/: AL4.STL  AL5.STL  AL6.STL  AL7.STL  AR4.STL  AR5.STL  AR6.STL  AR7.STL  Hip_Yaw_Left.STL  Hip_Yaw_Right.STL  Logo.STL  left_foot_link.STL  right_foot_link.STL
booster_assets-main/src/booster_assets/: __init__.py  motions.py
booster_deploy-main/: .flake8  (+4 more)
source/booster_train/: pyproject.toml  setup.py
source/booster_train/booster_train/: __init__.py
source/booster_train/booster_train/assets/robots/: actuator.py  booster.py
source/booster_train/booster_train/tasks/direct/: __init__.py
source/booster_train/booster_train/tasks/manager_based/beyond_mimic/agents/: rsl_rl_ppo_cfg.py
source/booster_train/booster_train/tasks/manager_based/beyond_mimic/mdp/: __init__.py  commands.py  events.py  observations.py  rewards.py  terminations.py
source/booster_train/booster_train/tasks/manager_based/beyond_mimic/robots/k1/fight_001/: __init__.py  env_cfg.py  ppo_cfg.py  tracking_env_cfg.py
source/booster_train/config/: extension.toml
source/booster_train/docs/: CHANGELOG.rst
(+68 files in other folders)
