[metadata]
name = booster_assets
version = 1.0.0
description = booster assets
long_description = file: README.md
long_description_content_type = text/markdown
author = Booster Inc.
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    booster-assets = booster_assets.cli:main
